--- a/Index.html
+++ b/Index.html
@@ -5,63 +5,232 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="description" content="Crypto Asset Recovery - Recover funds from crypto scams and fraudulent investment platforms with expert support."/>
   <title>Crypto Asset Recovery | Recover Funds from Crypto Scams</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet"/>
   <style>
-    /* [Your existing CSS — unchanged] */
     * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Inter', sans-serif; }
     body { line-height: 1.6; color: #222; background: #f9f9f9; }
-    header { background: #000; padding: 1rem 2rem; display: flex; align-items: center; justify-content: space-between; }
+    header {
+      background: #000; padding: 1rem 2rem;
+      display: flex; align-items: center; justify-content: space-between;
+    }
     header img.logo { height: 50px; border-radius: 12px; }
-    header nav a { color: white; text-decoration: none; margin-left: 1rem; font-weight: 600; cursor: pointer; }
-    .hero { background: url('https://i.imgur.com/xuRPrKG.jpeg') no-repeat center center/cover; color: white; text-align: center; padding: 6rem 2rem; position: relative; }
-    .hero::after { content: ""; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.5); z-index: 0; }
-    .hero h1, .hero p { position: relative; z-index: 1; }
+    header nav a {
+      color: white; text-decoration: none;
+      margin-left: 1rem; font-weight: 600; cursor: pointer;
+    }
+    .hero {
+      background: url('https://i.imgur.com/xuRPrKG.jpeg') no-repeat center center/cover;
+      color: white; text-align: center; padding: 6rem 2rem; position: relative;
+    }
+    .hero::after {
+      content: ""; position: absolute; top: 0; left: 0;
+      width: 100%; height: 100%; background: rgba(0,0,0,0.5); z-index: 0;
+    }
+    .hero h1, .hero p, .hero button { position: relative; z-index: 1; }
     .hero h1 { font-size: 2.5rem; margin-bottom: 1rem; }
     .hero p { font-size: 1.2rem; margin-bottom: 2rem; }
-    .hero button { background: #0f62fe; border: none; color: white; padding: 0.75rem 1.5rem; font-size: 1rem; border-radius: 5px; cursor: pointer; }
-    .section { padding: 4rem 2rem; max-width: 1000px; margin: auto; background: white; margin-bottom: 1rem; }
-    .trusted-brands { display: flex; justify-content: space-around; align-items: center; margin: 2rem 0; flex-wrap: wrap; }
+    .hero button {
+      background: #0f62fe; border: none; color: white;
+      padding: 0.75rem 1.5rem; font-size: 1rem;
+      border-radius: 5px; cursor: pointer;
+    }
+    .section {
+      padding: 4rem 2rem; max-width: 1000px;
+      margin: auto; background: white; margin-bottom: 1rem;
+    }
+    .trusted-brands {
+      display: flex; justify-content: space-around;
+      align-items: center; margin: 2rem 0; flex-wrap: wrap;
+    }
     .trusted-brands img { max-height: 40px; margin: 0.5rem 1rem; opacity: 0.8; }
-    .certified-experts { text-align: center; padding: 2rem 1rem; background: #e0f0ff; margin-bottom: 1rem; border-radius: 8px; }
+    .certified-experts {
+      text-align: center; padding: 2rem 1rem;
+      background: #e0f0ff; margin-bottom: 1rem;
+      border-radius: 8px;
+    }
     .certified-experts img { max-width: 160px; height: auto; }
-    .certified-experts h3 { margin-top: 1rem; font-weight: 700; color: #0f62fe; }
+    .certified-experts h3 {
+      margin-top: 1rem; font-weight: 700; color: #0f62fe;
+    }
     .faq-item { margin-bottom: 1rem; border-bottom: 1px solid #ddd; cursor: pointer; }
     .faq-question { font-weight: 600; padding: 0.5rem; }
-    .faq-answer { max-height: 0; overflow: hidden; transition: max-height 0.4s ease; padding: 0 0.5rem; }
-    .faq-item.open .faq-answer { max-height: 200px; padding-top: 0.5rem; }
-    .case-studies { background: #eef3fd; padding: 2rem; margin-bottom: 2rem; border-radius: 8px; }
-    .testimonials { background: url('https://i.imgur.com/xuRPrKG.jpeg') no-repeat center center/cover; color: white; padding: 4rem 2rem; text-align: center; position: relative; }
-    .testimonials::before { content: ""; position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.6); z-index: 0; }
-    .testimonials > div { position: relative; z-index: 1; max-width: 800px; margin: auto; }
-    .testimonial { font-style: italic; font-size: 1.2rem; min-height: 120px; transition: opacity 0.5s ease; }
-    form { display: flex; flex-direction: column; gap: 1rem; }
-    form input, form textarea { padding: 0.75rem; border: 1px solid #ccc; border-radius: 4px; font-size: 1rem; }
-    form button { background: #0f62fe; border: none; color: white; padding: 0.75rem; border-radius: 4px; font-size: 1rem; cursor: pointer; }
-    footer { background: #111; color: white; padding: 2rem; text-align: center; }
+    .faq-answer {
+      max-height: 0; overflow: hidden;
+      transition: max-height 0.4s ease;
+      padding: 0 0.5rem;
+    }
+    .faq-item.open .faq-answer {
+      max-height: 200px; padding-top: 0.5rem;
+    }
+    .case-studies {
+      background: #eef3fd; padding: 2rem;
+      margin-bottom: 2rem; border-radius: 8px;
+    }
+    .testimonials {
+      background: url('https://i.imgur.com/xuRPrKG.jpeg') no-repeat center center/cover;
+      color: white; padding: 4rem 2rem; text-align: center;
+      position: relative;
+    }
+    .testimonials::before {
+      content: ""; position: absolute; top: 0; left: 0;
+      width: 100%; height: 100%; background: rgba(0,0,0,0.6); z-index: 0;
+    }
+    .testimonials > div {
+      position: relative; z-index: 1;
+      max-width: 800px; margin: auto;
+    }
+    .testimonial {
+      font-style: italic; font-size: 1.2rem;
+      min-height: 120px; transition: opacity 0.5s ease;
+    }
+    form {
+      display: flex; flex-direction: column; gap: 1rem;
+    }
+    form input, form textarea {
+      padding: 0.75rem; border: 1px solid #ccc;
+      border-radius: 4px; font-size: 1rem;
+    }
+    form button {
+      background: #0f62fe; border: none; color: white;
+      padding: 0.75rem; border-radius: 4px;
+      font-size: 1rem; cursor: pointer;
+    }
+    footer {
+      background: #111; color: white; padding: 2rem; text-align: center;
+    }
     footer img { height: 40px; margin-bottom: 1rem; }
-    footer a.team-link { color: #0f62fe; cursor: pointer; text-decoration: underline; display: inline-block; margin-top: 0.5rem; }
-    .modal { display: none; position: fixed; z-index: 1000; left: 0; top: 0; width: 100%; height: 100%; overflow: auto; background-color: rgba(0,0,0,0.7); align-items: center; justify-content: center; padding: 1rem; }
-    .modal-content { background: white; border-radius: 8px; max-width: 600px; margin: auto; padding: 1rem; position: relative; text-align: center; }
-    .modal-content img { max-width: 100%; border-radius: 8px; }
-    .modal-close { position: absolute; top: 0.5rem; right: 0.75rem; font-size: 1.5rem; font-weight: bold; color: #555; cursor: pointer; }
+    footer a.team-link {
+      color: #0f62fe; cursor: pointer;
+      text-decoration: underline; display: inline-block;
+      margin-top: 0.5rem;
+    }
+    .modal {
+      display: none; position: fixed;
+      z-index: 1000; left: 0; top: 0;
+      width: 100%; height: 100%; overflow: auto;
+      background-color: rgba(0,0,0,0.7);
+      align-items: center; justify-content: center;
+      padding: 1rem;
+    }
+    .modal-content {
+      background: white; border-radius: 8px;
+      max-width: 600px; margin: auto;
+      padding: 1rem; position: relative;
+      text-align: center;
+    }
+    .modal-content img {
+      max-width: 100%; border-radius: 8px;
+    }
+    .modal-close {
+      position: absolute; top: 0.5rem; right: 0.75rem;
+      font-size: 1.5rem; font-weight: bold; color: #555;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
 
-<!-- [your full existing HTML — no changes needed here] -->
+<header>
+  <img src="https://i.imgur.com/icNCu9P.png" class="logo" alt="Crypto Asset Recovery" />
+  <nav>
+    <a href="#">Home</a>
+    <a id="nav-services" href="#what-we-do">Services</a>
+    <a href="#contact">Contact</a>
+  </nav>
+</header>
+
+<section class="hero">
+  <h1>Crypto Asset Recovery</h1>
+  <p>Recover your lost or stolen crypto funds from scams and fraudulent investments.</p>
+  <button id="btn-get-help">Get Help Now</button>
+</section>
+
+<section id="what-we-do" class="section">
+  <h2>What We Do</h2>
+  <p>We specialize in helping victims of cryptocurrency scams and fraudulent investment platforms track and recover lost funds. Our expert team utilizes legal tools, blockchain analysis, and international resources to support recovery efforts quickly and securely.</p>
+</section>
+
+<section class="section">
+  <h2>Why Choose Us</h2>
+  <ul style="list-style: disc; padding-left: 2rem;">
+    <li>No upfront fees – we only succeed when you do</li>
+    <li>Specialized expertise in crypto fraud investigation</li>
+    <li>Secure, confidential, and legally backed recovery process</li>
+    <li>Responsive support and dedicated case managers</li>
+  </ul>
+</section>
+
+<section class="section">
+  <h2>Trusted by Clients & Featured In</h2>
+  <div class="trusted-brands">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/5/5f/Trustpilot_logo.png" alt="Trustpilot" />
+    <img src="https://upload.wikimedia.org/wikipedia/commons/5/57/BBC_logo.png" alt="BBC" />
+    <img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Yahoo_Finance_Logo_2019.png" alt="Yahoo Finance" />
+  </div>
+</section>
+
+<section class="certified-experts">
+  <h3>Certified & Trusted Experts</h3>
+  <img src="https://i.imgur.com/vn8Xc61.png" alt="Certified & Trusted Experts Badge" />
+</section>
+
+<section class="section">
+  <h2>Frequently Asked Questions</h2>
+  <div class="faq-item"><div class="faq-question">How long does recovery take?</div><div class="faq-answer">Most recoveries take 2–6 weeks on average.</div></div>
+  <div class="faq-item"><div class="faq-question">Do I have to pay upfront?</div><div class="faq-answer">No — you pay only when funds are recovered.</div></div>
+  <div class="faq-item"><div class="faq-question">What scams do you handle?</div><div class="faq-answer">Crypto scams, investment frauds, fake exchanges, and phishing attacks.</div></div>
+</section>
+
+<section class="section case-studies">
+  <h2>Recent Case Highlights</h2>
+  <ul>
+    <li><strong>Robert T.</strong> — $370,000 recovered from a fraudulent ICO platform.</li>
+    <li><strong>Linda P.</strong> — $61,000 restored from a fake brokerage.</li>
+  </ul>
+</section>
+
+<section class="testimonials">
+  <div>
+    <h2>What Our Clients Say</h2>
+    <p class="testimonial" id="testimonial-text"></p>
+  </div>
+</section>
+
+<section id="contact" class="section">
+  <h2>Free Case Evaluation</h2>
+  <form>
+    <input type="text" placeholder="Full Name" required />
+    <input type="email" placeholder="Email Address" required />
+    <textarea rows="5" placeholder="Describe your case..." required></textarea>
+    <button type="submit">Submit</button>
+  </form>
+</section>
+
+<footer>
+  <img src="https://i.imgur.com/icNCu9P.png" alt="Crypto Asset Recovery logo" />
+  <p>&copy; 2025 Crypto Asset Recovery. All rights reserved.</p>
+  <p>Privacy Policy | Terms & Conditions</p>
+  <a class="team-link" id="open-team-modal">Meet the Team</a>
+</footer>
+
+<div id="team-modal" class="modal">
+  <div class="modal-content">
+    <span class="modal-close" id="close-team-modal">&times;</span>
+    <h2>Our Expert Team</h2>
+    <img src="https://i.imgur.com/v1wsGB7.jpeg" alt="Team Experts Group Photo" />
+  </div>
+</div>
 
 <script>
-  // FAQ Toggle
   document.querySelectorAll('.faq-item').forEach(item => {
     item.addEventListener('click', () => item.classList.toggle('open'));
   });
 
-  // Testimonial Carousel
   const testimonials = [
-    '"Thanks to Crypto Asset Recovery, I got back over $12,000 I thought was gone forever. Quick and professional!" – Sarah M.',
-    '"Their team was responsive, supportive, and truly effective. Highly recommend them." – James K.',
-    '"I was scammed out of $370,000 in a fake ICO. These guys actually got it back. Incredible." – Robert T.',
-    '"After months of trying, they helped me recover $61,000 lost to a fake broker site. Game-changing service!" – Linda P.'
+    '"Thanks to Crypto Asset Recovery, I got back over $12,000 I thought was gone forever." – Sarah M.',
+    '"Their team was responsive, supportive, and truly effective." – James K.',
+    '"I was scammed out of $370,000 in a fake ICO. These guys actually got it back." – Robert T.',
+    '"After months of trying, they helped me recover $61,000 lost to a fake broker." – Linda P.'
   ];
   let index = 0;
   const testimonialEl = document.getElementById('testimonial-text');
@@ -76,7 +245,6 @@
   rotateTestimonial();
   setInterval(rotateTestimonial, 5000);
 
-  // Smooth scroll for nav links and buttons
   document.getElementById('nav-services').addEventListener('click', e => {
     e.preventDefault();
     document.getElementById('what-we-do').scrollIntoView({ behavior: 'smooth' });
@@ -85,7 +253,6 @@
     document.getElementById('contact').scrollIntoView({ behavior: 'smooth' });
   });
 
-  // Modal open/close logic for team photo
   const teamModal = document.getElementById('team-modal');
   document.getElementById('open-team-modal').addEventListener('click', () => {
     teamModal.style.display = 'flex';
@@ -94,18 +261,10 @@
     teamModal.style.display = 'none';
   });
   window.addEventListener('click', e => {
-    if(e.target === teamModal) {
+    if (e.target === teamModal) {
       teamModal.style.display = 'none';
     }
   });
-
-  // ESC key closes modal
-  document.addEventListener('keydown', e => {
-    if (e.key === 'Escape' && teamModal.style.display === 'flex') {
-      teamModal.style.display = 'none';
-    }
-  });
-
 </script>
 </body>
 </html>
